--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+auto_mix_prep==0.2.0
 customtkinter==5.2.2
-GitPython==3.1.43
-gspread==6.1.2
-protobuf==5.28.0
-webdriver_manager==4.0.2
-selenium==4.24.0
+google_api_python_client==2.161.0
+google_auth_oauthlib==1.2.1
+Pillow==11.1.0
+protobuf==6.30.1
+Requests==2.32.3
+sqlmodel==0.0.24
