--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ Pillow==11.1.0
 protobuf==6.30.1
 Requests==2.32.3
 sqlmodel==0.0.24
+beautifulsoup4==4.13.3
+selenium==4.30.0
+webdriver-manager==4.0.2
